# discord-ext-tools

./: .gitignore  .readthedocs.yml  LICENSE  README.md  pyproject.toml  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: lint.yml
discord/ext/tools/: __init__.py  checks.py  context.py  cooldowns.py  database.py  embeds.py  help_commands.py  models.py
discord/ext/tools/app_commands/: __init__.py  checks.py  enums.py  errors.py  models.py
discord/ext/tools/app_commands/i18n/: client.py  translator.py
discord_tools/: __init__.py  checks.py  converters.py  errors.py  flags.py  models.py
discord_tools/app_commands/: __init__.py  checks.py  context_menu.py  enums.py  errors.py  models.py  transformers.py
discord_tools/app_commands/i18n/: __init__.py  http.py  translator.py
discord_tools/ipc/: __init__.py  _types.py  response.py  route.py  server.py  session.py  state.py
discord_tools/ui/: __init__.py  checks.py
docs/: Makefile  changelog.rst  conf.py  index.rst  make.bat
docs/_static/css/: custom.css
docs/_static/js/: custom.js
docs/api/: checks.rst  converters.rst  errors.rst  index.rst  models.rst
docs/extensions/: attributetable.py  exception_hierarchy.py  resourcelinks.py
docs/interactions/: checks.rst  data_classes.rst  enums.rst  errors.rst  i18n.rst  index.rst  models.rst  transformers.rst
docs/ipc/: index.rst
examples/app_commands/: max_concurrency.py
examples/i18n/: client.py  json-example.json  yml-example.yml
examples/i18n/po-example/: english.po  french.po  spanish.po
private-tests/tests_i18n/: test_i18n_translator.py  test_yml_translations.yml
